Correct alignment for tablet view

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -151,9 +151,9 @@ footer img {
   height: 1.5rem;
 }
 
-@media only screen and (max-width: 1032px) {
+@media only screen and (max-width: 1040px) {  
   header {
-    margin-top: 0;
+    margin: 0 auto;
     width: 100%;
   }
 
@@ -161,16 +161,24 @@ footer img {
     height: 20rem;
   }
 
+  .container {
+    width: 100%;
+  }
+
   .content {
     position: absolute;
     top: 20rem;
   }
 
-  .main-banner .textbox {
-    top: 5rem;
-    padding: 0.75rem 4rem;
-    position: absolute;         /* Not moving with screen stretch */
+  .main-banner {
+    display: flex;
+    position: absolute;
     right: 2rem;
+    top: 8rem;
+  }
+
+  .main-banner .textbox {
+    padding: 0.75rem 4rem;
   }
 
   .main-banner h1 {
